[package]
name = "learn_chumsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "42d5af5a5710f6d60beedcde1904155e96451568", features = [
	"label",
] }

rym_lexer = { path = "../rym/crates/rym_lexer" }
owo-colors = "3.5.0"

[dependencies.insta]
version = "1.26"
# features = ["yaml", "ron"]

[dev-dependencies]
indoc = "2.0.0"
