[package]
name = "learn_chumsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "e313022b5c972b13db624f033d67fa8ee4787048", features = [
	"label",
] }

rym_lexer = { path = "../rym/crates/rym_lexer" }
owo-colors = "3.5.0"

[dependencies.insta]
version = "1.26"
# features = ["yaml", "ron"]

[dev-dependencies]
indoc = "2.0.0"
