[package]
name = "learn_chumsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "635cb2f33582a69bdf52395a30f13a93d3a9540c", features = [
	"label",
] }
rym_lexer = { path = "../rym/crates/rym_lexer" }

[dependencies.insta]
version = "1.26"
# features = ["yaml", "ron"]

[dev-dependencies]
indoc = "2.0.0"

# smallest binary without compromising on speed
[profile.tiny]
inherits = "release"
lto = "fat"
